--- a/registroUsers/static/css/styleRegistro.css
+++ b/registroUsers/static/css/styleRegistro.css
@@ -2,24 +2,105 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
+/* Home Background */
 body { 
-    background-image: url('./fondo.jpg');
+    min-height: 100vh;
+    background: url('./fondo.jpg') no-repeat;
     background-size: cover;
+    background-position: center;
     flex-wrap: wrap;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
+
+/* Header Styles */
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    background: #24303c; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+/* Logo Styles */
+.logo {
+    font-size: 32px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+    width: 80px;
+    height: 80px;
+    border-radius: 80px;
+    margin-right: auto; /* Empuja la barra de navegación a la derecha */
+}
+
+/* Navbar Styles */
+.navbar a {
+    position: relative;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 40px;
+
+}
+
+.navbar a::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #fff;
+    transition: .3s;
+}
+
+.navbar a:hover:before {
+    width: 100%;
+
+}
+
+.Bienvenida{
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centra verticalmente */
+    align-items: center;    /* Centra horizontalmente */
+    min-height: 100vh;      /* Asegura que ocupe al menos la altura completa de la ventana */
+    text-align: center;     /* Centra el texto */
+    margin-top: 140px;      /* Ajusta el margen superior según sea necesario */
+    color: #fff;
+}
+
+section a.hover {
+    color: #1f53c5;
+    text-decoration: line-through;
+}
+
 .menu {
     float: right !important;
   }
+
+.form-container {
+    margin-top: 100px; /* Ajusta este valor según sea necesario */
+}
 
 .form-register {
     width: 400px;
     background: #24303c;
     padding: 30px;
     margin: auto;
-    margin-top: 50px;
-    border-radius: 4px;
+    margin-top: 200px;
+    border-radius: 5px;
     font-family: 'calibri';
     color: white;
     box-shadow: 7px 13px 37px #000;
@@ -82,3 +163,27 @@ body {
     text-align: center;
 }
 
+.cta {
+    width: 100%;
+    background-color: #1f53c5;
+    border: none;
+    padding: 12px;
+    color: #fff;
+    margin: 16px 0;
+    font-size: 16px;
+    text-align: left;
+    text-decoration: none;
+    margin-top: 0%;
+}
+
+.registrer{
+    text-decoration: none;
+    color: #fff;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
