--- a/registroUsers/templates/signin.html
+++ b/registroUsers/templates/signin.html
@@ -5,8 +5,8 @@
     <b style="color: red;">{{error}}</b>
     <h4>Iniciar sesión</h4>
     <form method="POST">
-    <input class="controls" type="text" name="username" id="usuarios"  autocomplete="off"   required placeholder="Ingrese su usuario">
-    <input class="controls" type="password" name="password" id="contraseñas" autocomplete="off" required placeholder="Ingrese su contraseña">
+    <input class="controls" type="text" name="username" id="usuarios"  autocomplete="off"   required placeholder="Ingrese su usuario" title="Usuario">
+    <input class="controls" type="password" name="password" id="contraseñas" autocomplete="off" required placeholder="Ingrese su contraseña" title="Contraseña">
     <button class="bottons" type="submit" value="Iniciar sesión"> Iniciar sesión</button>
     </form>
 
