New changes: Icon Image and Register Now color

--- a/registroUsers/templates/home.html
+++ b/registroUsers/templates/home.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ChainReserve</title>
         <link rel="stylesheet" type="text/css" href="../static/css/styleRegistro.css">
+        <!-- Icono en el browser -->
+        <link rel="icon" href="../static/css/logo.ico">
     </head>
     <body>
         <header class="header">
@@ -34,7 +36,7 @@
         <h2>Bienvenid@ a ChainReserve</h2>
         <p>Descubre e innova en cada una de tus reservas</p>
         <br>
-        <a class="registrer" href="signup/">¡Registrate ahora mismo!</a>
+        <a class="registrer" href="signup/" style="color:#00BFFF">¡Registrate ahora mismo!</a>
         {% endif %}
         
     </section>
