--- a/registroUsers/templates/signup.html
+++ b/registroUsers/templates/signup.html
@@ -12,7 +12,8 @@
         <input class="controls" type="text" name="username" id="usuarios"  autocomplete="off"  required placeholder="Ingrese su usuario" title="Usuario">
         <input class="controls" type="password" name="password1"   autocomplete="off" id="contraseña1"required placeholder="Ingrese su contraseña" title="Contraseña">
         <input class="controls" type="password" name="password2"   autocomplete="off"id="contraseña2"required placeholder="Ingrese su contraseña nuevamente" title="Contraseña">
-        <!-- <p>Estoy de acuerdo con <a href="#">Terminos y condiciones</a></p> <input class="bottons" type="checkbox" required> -->
+        <!-- <p>Estoy de acuerdo con</p><a href="#">Terminos y condiciones</a> -->
+        <!-- <input class="bottons" type="checkbox" required> -->
         <input class="bottons" type="submit" value="Registrar">
         <p><a href="{% url 'login'%}">Ya tengo cuenta</a></p>
     </form>
