--- a/registroUsers/templates/home.html
+++ b/registroUsers/templates/home.html
@@ -5,19 +5,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ChainReserve</title>
-        <link rel="stylesheet" type="text/css" href="../static/css/styleRegistro.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styleRegistro.css' %}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         <!-- Icono en el browser -->
-        <link rel="icon" href="../static/css/logo.ico">
+        <link rel="icon" href="{% static 'css/logo.ico' %}">
     </head>
     <body>
         <header class="header">
             <a  href="{% url 'home' %}" class="logo">
-                <img src="../static/css/logo.png" alt="Logo" class="logo"> 
+                <img src="{% static 'css/logo.png' %}" alt="Logo" class="logo"> 
             </a>
 
             <nav class="navbar">
                 <a href="{% url 'home' %}">Inicio</a>
+                <a href="{% url 'reserve' %}">Reservar</a>
                 {% if user.is_authenticated %}
+                <!-- <a href="{% url 'post' %}">Publicar</a> -->
+                <a href="{% url 'perfil' %}" class="">Mi Perfil</a>
                 <a href="{% url 'logout' %}" class="">Cerrar sesión</a>
                 {% else %}
                 <a href="{% url 'login' %}" class="">Iniciar sesión</a>
@@ -29,13 +33,15 @@
     {% block content %}
     <section class="Bienvenida">
         {% if user.is_authenticated %}
-        <h1 style="color: gold;">{{user}}</h1>
+        <a  class="registrer"  href="{% url 'perfil' %}"><h1 style="color: gold;">¡Hola {{user}} <img src="https://zajuna.sena.edu.co/img/icons/mano.gif" alt="" width="auto" height="40px">!</a>   
+        </h1>
+        
         <h2>!Bienvenid@ a ChainReserve¡</h2>
+        
         <p>Descubre e innova en cada una de tus reservas</p>
         {% else %}
         <h2>Bienvenid@ a ChainReserve</h2>
         <p>Descubre e innova en cada una de tus reservas</p>
-        <br>
         <a class="registrer" href="signup/" style="color:#00BFFF">¡Registrate ahora mismo!</a>
         {% endif %}
         
